- Apps updated with apache-mynewt-core 1_8_0_tag

--- a/apps/ota_uwb_master/syscfg.yml
+++ b/apps/ota_uwb_master/syscfg.yml
@@ -4,7 +4,6 @@ syscfg.vals:
     CONSOLE_UART_BAUD: '115200'
     CONSOLE_UART_TX_BUF_SIZE: '1024'
     CONSOLE_RTT: 0
-    CONSOLE_HISTORY_SIZE: 8
 
     UWB_DEVICE_0: 1
     FS_XTALT_AUTOTUNE_ENABLED: 0
@@ -20,9 +19,9 @@ syscfg.vals:
     IMGMGR_CLI: 1
 
     # Enable newtmgr commands.
-    STATS_NEWTMGR: 1
-    LOG_NEWTMGR: 1
-    CONFIG_NEWTMGR: 1
+    STATS_MGMT: 1
+    LOG_MGMT: 1
+    CONFIG_MGMT: 1
 
     REBOOT_LOG_FCB: 1
     LOG_FCB: 1
