--- a/apps/twr_node_tdma/syscfg.yml
+++ b/apps/twr_node_tdma/syscfg.yml
@@ -4,7 +4,6 @@ syscfg.vals:
     CONSOLE_RTT: 1
     CONSOLE_UART_BAUD: '460800'
     CONSOLE_UART_TX_BUF_SIZE: '1024'
-    CONSOLE_HISTORY_SIZE: 8
 
     UWB_DEVICE_0: 1
     FS_XTALT_AUTOTUNE_ENABLED: 0
@@ -23,9 +22,9 @@ syscfg.vals:
     SHELL_TASK: 1
 
     # Enable newtmgr commands.
-    STATS_NEWTMGR: 1
-    LOG_NEWTMGR: 1
-    CONFIG_NEWTMGR: 1
+    STATS_MGMT: 1
+    LOG_MGMT: 1
+    CONFIG_MGMT: 1
     CONFIG_FCB: 1
 
     # Enable frame_filter by default to allow auto-ack to work
