- updated apache-mynewt-core version 1.8.0 - Added CONSOLE_HISTORY ram macro to syscfg - Removed CONSOLE_HISTORY_RAM_HISTORY_SIZE macro to fix build errors.

--- a/apps/ota_uwb_master/syscfg.yml
+++ b/apps/ota_uwb_master/syscfg.yml
@@ -4,6 +4,7 @@ syscfg.vals:
     CONSOLE_UART_BAUD: '115200'
     CONSOLE_UART_TX_BUF_SIZE: '1024'
     CONSOLE_RTT: 0
+    CONSOLE_HISTORY: ram
 
     UWB_DEVICE_0: 1
     FS_XTALT_AUTOTUNE_ENABLED: 0
