--- a/apps/rtdoa_node/syscfg.yml
+++ b/apps/rtdoa_node/syscfg.yml
@@ -12,7 +12,7 @@ syscfg.vals:
     CONSOLE_UART_TX_BUF_SIZE: 1024
     CONSOLE_UART_RX_BUF_SIZE: 256
     CONSOLE_ECHO: 1
-    CONSOLE_HISTORY_SIZE: 4
+    CONSOLE_HISTORY: ram
 
     # Shell
     SHELL_TASK: 1
