--- a/apps/twr_nranges_tdma/syscfg.yml
+++ b/apps/twr_nranges_tdma/syscfg.yml
@@ -5,7 +5,7 @@ syscfg.vals:
     CONSOLE_BLE_MONITOR: 0
     CONSOLE_UART_BAUD: 460800
     CONSOLE_UART_TX_BUF_SIZE: 1024
-    CONSOLE_HISTORY_SIZE: 8
+    CONSOLE_HISTORY: ram
 
     LOG_LEVEL: 0
 
