--- a/apps/streaming/syscfg.yml
+++ b/apps/streaming/syscfg.yml
@@ -4,6 +4,7 @@ syscfg.vals:
     CONSOLE_UART_BAUD: '460800'
     CONSOLE_UART_TX_BUF_SIZE: '1024'
     CONSOLE_RTT: 1
+    CONSOLE_HISTORY: ram
 
     UWB_DEVICE_0: 1
     FS_XTALT_AUTOTUNE_ENABLED: 0
