--- a/apps/twr_aloha/syscfg.yml
+++ b/apps/twr_aloha/syscfg.yml
@@ -4,6 +4,7 @@ syscfg.vals:
     CONSOLE_UART_BAUD: '115200'
     CONSOLE_UART_TX_BUF_SIZE: '1024'
     CONSOLE_RTT: 0
+    CONSOLE_HISTORY: ram
     CONFIG_FCB: 1
 
     UWB_DEVICE_0: 1
