--- a/apps/mac_recver/pkg.yml
+++ b/apps/mac_recver/pkg.yml
@@ -7,28 +7,34 @@
 # "License"); you may not use this file except in compliance
 # with the License.  You may obtain a copy of the License at
 #
-# http://www.apache.org/licenses/LICENSE-2.0
+#  http://www.apache.org/licenses/LICENSE-2.0
 #
 # Unless required by applicable law or agreed to in writing,
 # software distributed under the License is distributed on an
 # "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-#  KIND, either express or implied.  See the License for the
+# KIND, either express or implied.  See the License for the
 # specific language governing permissions and limitations
 # under the License.
 #
 
-.app.db
-.app
-bin
-obj
-tags
-.gdb_history
-.gdb_out
-.gdb_cmds
-*~
-.DS_Store
-*.swp
-*.swo
-repos
-targets
-.vscode
+pkg.name: apps/mac_recver
+pkg.type: app
+pkg.description: "UWB Mac Receiver"
+pkg.author: "Tuan Ngo Van <tuanngo0898@gmail.com>"
+pkg.homepage: "https://github.com/tuanngo0898"
+pkg.keywords:
+  - dw1000
+
+pkg.deps:
+    - "@apache-mynewt-core/kernel/os"
+    - "@apache-mynewt-core/sys/console/full"
+    - "@apache-mynewt-core/sys/shell"
+    - "@apache-mynewt-core/sys/log/full"
+    - "@apache-mynewt-core/sys/stats/full"
+
+    - "@decawave-uwb-core/sys/uwbcfg"
+    - "@decawave-uwb-core/hw/drivers/uwb"
+
+pkg.cflags:
+    - "-std=gnu11"
+    - "-fms-extensions"
